# python-project-49

./: .gitignore  Makefile  README.md  pyproject.toml
brain_games/: cli.py  engine.py  even.py
brain_games/games/: calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/games_modules/: calc_module.py  constants.py  prime_module.py  progression_module.py
brain_games/scripts/: brain_even.py  brain_games.py  script_for_calc.py  script_for_even.py  script_for_gcd.py  script_for_prime.py  script_for_progress.py
