[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Daniil Balabanov <spacewalrus@bk.ru>"]
readme = "README.md"
packages = [{include = "brain_games"}]

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
brain-games = "brain_games.scripts.scrp:main"
brain-even = "brain_games.scripts.script_for_even:main"
brain-calc = "brain_games.scripts.script_for_calc:main"
brain-gcd = "brain_games.scripts.script_for_gcd:main"
brain-progression = "brain_games.scripts.script_for_progress:main"
brain-prime = "brain_games.scripts.script_for_prime:main"
